panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__decl_in_global_scope__test_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition x~0 `int` ∅)
   (definition y~1 `int` 42))

----- stderr -----
