panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__decl_in_global_scope__test_tentative_definitions.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_tentative_definitions.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition tentative~0 `int` ∅)
   (tentative-definition tentative~0 `int` ∅)
   (tentative-definition tentative~0 `int` ∅))

----- stderr -----
